--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 Internet deve essere al servizio del "bene pubblico": il <br>manifesto di Tim Bernars-Lee
             </h1>
             <span class="text-title-color">
-                Scritto da <strong>The Booleaner</strong> <br> <span>il 10/10/2020</span>
+                Scritto da <strong>The Booleaner</strong> <br> <div>il 10/10/2020</div>
             </span>
         </section>
 
         <!-- img -->
 
-        <section>
+        <section class="padding-photo">
             <img src="./img/tim-1.jpg" alt="Tim Berners-Lee">
             <img src="./img/tim-2.jpg" alt="Tim Berners-Lee">
             <div class="sub-photo">1st Photo: John S. and James L. Knight Foundation, by scott henrichsen </div>
@@ -36,10 +36,52 @@
 
         <section>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, suscipit. Inventore, molestias incidunt unde aliquam sed velit repellendus delectus ad labore obcaecati voluptas nesciunt ab in nulla neque sint praesentium?
-            Deserunt autem modi natus hic iste. Facilis explicabo impedit sed saepe harum deleniti repudiandae hic quod ea alias illum doloribus itaque culpa incidunt, beatae, voluptatem fugiat veniam? Quibusdam, debitis ullam!
+            Deserunt autem modi natus hic iste. <mark>Facilis explicabo impedit sed saepe harum deleniti repudiandae hic quod ea alias illum doloribus</mark> itaque culpa incidunt, beatae, voluptatem fugiat veniam? Quibusdam, debitis ullam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto voluptatibus inventore dicta? Enim molestias, molestiae rerum rem minus dicta tenetur cum veritatis eum asperiores libero aliquam natus deleniti illum eligendi!
             </p>
         </section>
 
+        <section>
+            <ul class="list-ul-padding">
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit explicabo nemo minima? Ab qui voluptatem eligendi et deserunt, quaerat dolorem quasi quia eius sunt eos porro odio sed illum aperiam!
+                </li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit explicabo nemo minima? Ab qui voluptatem eligendi et deserunt, quaerat dolorem quasi quia eius sunt eos porro odio sed illum aperiam!
+                </li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit explicabo nemo minima? Ab qui voluptatem eligendi et deserunt, quaerat dolorem quasi quia eius sunt eos porro odio sed illum aperiam!
+                </li>
+            </ul>
+        </section>
+
+        <!-- table -->
+        <section>
+            <table>
+                <thead class="table-one">
+                    <tr >
+                        <th>
+                            lorem ipsum dolor
+                        </th>
+                        <th>
+                            lorem ipsum dolor
+                        </th>
+                        <th class="columns-three">
+                            lorem ipsum dolor
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            lorem ipsum dolor
+                        </td>
+                        <td>
+                            lorem ipsum dolor
+                        </td>
+                        <td>
+                            lorem ipsum dolor
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </main>
 
     <footer>
