--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         </section>
 
         <!-- table -->
-        <section>
+        <section class="table-cont">
             <table>
-                <thead class="table-one">
+                <thead>
                     <tr >
                         <th>
                             lorem ipsum dolor
@@ -68,19 +68,47 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr class="color-rows">
                         <td>
                             lorem ipsum dolor
                         </td>
                         <td>
                             lorem ipsum dolor
                         </td>
-                        <td>
-                            lorem ipsum dolor
+                        <td class="columns-three">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae iure necessitatibus officia praesentium a hic quis, ex illo rem iste ipsum expedita, temporibus, doloremque cum consectetur consequatur ipsa pariatur deleniti?
                         </td>
+
+                        <tr>
+                            <td>
+                                lorem ipsum dolor
+                            </td>
+                            <td>
+                                lorem ipsum dolor
+                            </td>
+                            <td class="columns-three">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae iure necessitatibus officia praesentium a hic quis, ex illo rem iste ipsum expedita, temporibus, doloremque cum consectetur consequatur ipsa pariatur deleniti?
+                            </td>
+
+                            <tr class="color-rows">
+                                <td>
+                                    lorem ipsum dolor
+                                </td>
+                                <td>
+                                    lorem ipsum dolor
+                                </td>
+                                <td class="columns-three">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae iure necessitatibus officia praesentium a hic quis, ex illo rem iste ipsum expedita, temporibus, doloremque cum consectetur consequatur ipsa pariatur deleniti?
+                                </td>
                     </tr>
                 </tbody>
             </table>
+        </section>
+
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, suscipit. Inventore, molestias incidunt unde aliquam sed velit repellendus delectus ad labore obcaecati voluptas nesciunt ab in nulla neque sint praesentium?
+            Deserunt autem modi natus hic iste. <mark>Facilis explicabo impedit sed saepe harum deleniti repudiandae hic quod ea alias illum doloribus</mark> itaque culpa incidunt, beatae, voluptatem fugiat veniam? Quibusdam, debitis ullam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto voluptatibus inventore dicta? Enim molestias, molestiae rerum rem minus dicta tenetur cum veritatis eum asperiores libero aliquam natus deleniti illum eligendi!
+            </p>
         </section>
     </main>
 
