--- a/index.html
+++ b/index.html
@@ -110,10 +110,15 @@
             Deserunt autem modi natus hic iste. <mark>Facilis explicabo impedit sed saepe harum deleniti repudiandae hic quod ea alias illum doloribus</mark> itaque culpa incidunt, beatae, voluptatem fugiat veniam? Quibusdam, debitis ullam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto voluptatibus inventore dicta? Enim molestias, molestiae rerum rem minus dicta tenetur cum veritatis eum asperiores libero aliquam natus deleniti illum eligendi!
             </p>
         </section>
+
+        <section>
+            <div class="text-title-color"> Potrebbero interessarti</div>
+            <div class="img-written-one">Lorem ipsum dolor</div>
+            <div class="img-written-two">Lorem ipsum dolor</div>
+        </section>
+
     </main>
-
-    <footer>
-
-    </footer>
 </body>
 </html>
+
+
