--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <h1>
                 Internet deve essere al servizio del "bene pubblico": il <br>manifesto di Tim Bernars-Lee
             </h1>
-            <span class="text-title-color">
-                Scritto da <strong>The Booleaner</strong> <br> <div>il 10/10/2020</div>
-            </span>
+            <div class="text-title-color">
+                Scritto da <strong>The Booleaner</strong> <br> <span>il 10/10/2020</span>
+            </div>
         </section>
 
         <!-- img -->
