--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,8 +21,9 @@
                 Internet deve essere al servizio del "bene pubblico": il <br>manifesto di Tim Bernars-Lee
             </h1>
             <div class="text-title-color">
-                Scritto da <strong>The Booleaner</strong> <br> <span>il 10/10/2020</span>
+                Scritto da <strong>The Booleaner</strong> <br> 
             </div>
+            <div class="text-title-color-two">il 10/10/2020</div>
         </section>
 
         <!-- img -->
@@ -112,7 +113,7 @@
         </section>
 
         <section>
-            <div class="text-title-color"> Potrebbero interessarti</div>
+            <div class="text-title-color-tree"> Potrebbero interessarti</div>
             <div class="img-written-one">Lorem ipsum dolor</div>
             <div class="img-written-two">Lorem ipsum dolor</div>
         </section>
