--- a/index.html
+++ b/index.html
@@ -9,39 +9,39 @@
 </head>
 <body>
     <header>
-        <section class="bg-header">
+        <div class="bg-header">
             <img src="./img/logo.svg" alt="logo booleaner">
-        </section>
+        </div>
     </header>
 
     <main>
         <!-- title  -->
-        <section class="title-article">
+        <div class="title-article">
             <h1>
                 Internet deve essere al servizio del "bene pubblico": il <br>manifesto di Tim Bernars-Lee
             </h1>
             <div class="text-title-color">
                 Scritto da <strong>The Booleaner</strong> <br> 
             </div>
-            <div class="text-title-color-two">il 10/10/2020</div>
-        </section>
+            <div class="text-title-color-font">il 10/10/2020</div>
+        </div>
 
         <!-- img -->
 
-        <section class="padding-photo">
+        <div class="padding-photo">
             <img src="./img/tim-1.jpg" alt="Tim Berners-Lee">
             <img src="./img/tim-2.jpg" alt="Tim Berners-Lee">
             <div class="sub-photo">1st Photo: John S. and James L. Knight Foundation, by scott henrichsen </div>
             <div class="sub-photo">2nd Photo; Wikimedia, by paul Clarke</div>
-        </section>
+        </div>
 
-        <section>
+        <div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, suscipit. Inventore, molestias incidunt unde aliquam sed velit repellendus delectus ad labore obcaecati voluptas nesciunt ab in nulla neque sint praesentium?
             Deserunt autem modi natus hic iste. <mark>Facilis explicabo impedit sed saepe harum deleniti repudiandae hic quod ea alias illum doloribus</mark> itaque culpa incidunt, beatae, voluptatem fugiat veniam? Quibusdam, debitis ullam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto voluptatibus inventore dicta? Enim molestias, molestiae rerum rem minus dicta tenetur cum veritatis eum asperiores libero aliquam natus deleniti illum eligendi!
             </p>
-        </section>
+        </div>
 
-        <section>
+        <div>
             <ul class="list-ul-padding">
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit explicabo nemo minima? Ab qui voluptatem eligendi et deserunt, quaerat dolorem quasi quia eius sunt eos porro odio sed illum aperiam!
                 </li>
@@ -50,10 +50,10 @@
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit explicabo nemo minima? Ab qui voluptatem eligendi et deserunt, quaerat dolorem quasi quia eius sunt eos porro odio sed illum aperiam!
                 </li>
             </ul>
-        </section>
+        </div>
 
         <!-- table -->
-        <section class="table-cont">
+        <div class="table-cont">
             <table>
                 <thead>
                     <tr >
@@ -104,19 +104,19 @@
                     </tr>
                 </tbody>
             </table>
-        </section>
+        </div>
 
-        <section>
+        <div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, suscipit. Inventore, molestias incidunt unde aliquam sed velit repellendus delectus ad labore obcaecati voluptas nesciunt ab in nulla neque sint praesentium?
             Deserunt autem modi natus hic iste. <mark>Facilis explicabo impedit sed saepe harum deleniti repudiandae hic quod ea alias illum doloribus</mark> itaque culpa incidunt, beatae, voluptatem fugiat veniam? Quibusdam, debitis ullam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto voluptatibus inventore dicta? Enim molestias, molestiae rerum rem minus dicta tenetur cum veritatis eum asperiores libero aliquam natus deleniti illum eligendi!
             </p>
-        </section>
+        </div>
 
-        <section>
+        <div>
             <div class="text-title-color-tree"> Potrebbero interessarti</div>
             <div class="img-written-one">Lorem ipsum dolor</div>
             <div class="img-written-two">Lorem ipsum dolor</div>
-        </section>
+        </div>
 
     </main>
 </body>
